# real-estate-market

./: .env.example  .gitignore  Makefile  README.md  TEST DATA 902.xlsx  Test-Data-Immo.pbix  Viz_immo.pbix  Viz_immo_Final.pbix  docker-compose.yml  package-lock.json  package.json
.grafana_storage/: grafana.db
analysis-scheduler/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
analysis-scheduler/analysis_scheduler/: __main__.py
analysis-scheduler/analysis_scheduler/daos/: analysis_schedules_dao.py  scr_property_ads_dao.py
analysis-scheduler/analysis_scheduler/providers/: env_vars_provider.py  mongodb_provider.py
analysis-scheduler/analysis_scheduler/services/: property_ads_analysis_launcher.py  scheduling_report_sender.py  stats_controller.py
dvf-producer/: Dockerfile  dvf_to_kafka.py  requirements.txt
immo-viz-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
immo-viz-api/immo_viz_api/: database.py  main.py  models.py  schemas.py  seeder.py
immo-viz-api/immo_viz_api/resources/: france_cities.csv  france_departments.csv  france_regions.csv
immo-viz-api/immo_viz_api/routers/: analysis_reports.py  cities.py  departments.py  fetching_reports.py  property_ads.py  regions.py  scheduling_reports.py
immoscraper/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
immoscraper/immoscraper/: extensions.py  items.py  mongodb_provider.py  pipelines.py  settings.py  utils.py
immoscraper/immoscraper/spiders/: bienici.py  bienici_spider.py  data_extractors.py  entreparticuliers_spider.py  logicimmo_spider.py  pap.py  pap_spider.py  url_builder.py
property-ads-analyzer/: Dockerfile  consumer.py  models.py  requirements.txt
